fix: overflow

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,6 +5,7 @@
   --text-color: #f1b2ce;
   --title-decor: #db00ff;
   --nav-color: #ff0070;
+  --title-color: #ff0070;
   --nav-hover-color: rgba(255, 0, 112, 0.4);
   --display-header-rec: block;
 }
