--- a/styles/light.css
+++ b/styles/light.css
@@ -5,6 +5,7 @@
   --text-color: #353430;
   --title-decor: #ffc2e6;
   --nav-color: #353430;
+  --title-color: #353430;
   --nav-hover-color: rgba(50, 49, 45, 0.4);
   --display-header-rec: none;
 }
@@ -17,6 +18,7 @@
     --text-color: #353430;
     --title-decor: #ffc2e6;
     --nav-color: #353430;
+    --title-color: #353430;
     --nav-hover-color: rgba(50, 49, 45, 0.4);
     --display-header-rec: none;
   }
